Clean up before finalizing

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="favicon" href="/images/favicon.png" />
+  <link rel="icon" type="favicon" href="/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Davis - Personal portfolio ReactJs template</title>
+  <title>Vincent Wayne - Violinist</title>
 </head>
 
 <body>
